Changed value of package.json homepage to point to https://denzelhartshorn.tech

--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "resume",
+  "name": "deployed-react-portfolio3",
   "version": "0.1.0",
   "private": true,
-  // "homepage": "https://denzelhartshorn.github.io/deployed-react-portfolio3/",
-  "homepage": "denzelhartshorn.tech",
+  "homepage": "https://denzelhartshorn.tech",
   "dependencies": {
     "gh-pages-deploy": "^0.5.1",
     "react": "^16.6.0",
